# phoneui-apps

./: configure.ac
data/: Makefile.am  phoneui-contacts.desktop  phoneui-dialer.desktop  phoneui-messages.desktop  phoneui-phone-log.desktop  phoneui-phonelog.desktop
src/: Makefile.am  contacts-main.c  dialer-main.c  messages-main.c  phone-log-main.c  quick-settings-main.c
